Add image address

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="C:/Users/USER/Desktop/Emages/Riz Khalee Banks-modified.png" alt="Riz picture" Width="400" < />
+        <img src="USER/Desktop/Emages/Riz Khalee Banks-modified.png" alt="Riz picture" Width="400" < />
       </td>
       <td>
         <h1>Heavenly Trade INC.</h1>
