--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="https://github.com/MorrisKTougbay/PracticeWork1/blob/main/Riz%20Khalee%20Banks.jpg" alt="Riz picture" Width="400" < />
+        <img src="Riz Khalee Banks.jpg" alt="Riz picture" Width="400" < />
       </td>
       <td>
         <h1>Heavenly Trade INC.</h1>
